<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>ch.bedag.dap.hellodata</groupId>
        <artifactId>hello-data</artifactId>
        <version>develop-SNAPSHOT</version>
    </parent>

    <artifactId>hello-data-portal</artifactId>
    <version>develop-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>hello-data-portal</name>

    <modules>
        <module>hello-data-portal-api</module>
        <module>hello-data-portal-ui</module>
        <module>hello-data-portal-ui-e2e</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>
</project>
